2019/04/10 (version 1.0.0)
- General: first stable version of the module

2019/04/19 (version 1.0.1)
- Bug:     fixed untranslated messages with long code
