@@ -37,6 +37,10 @@ $_MODULE['<{pays_ps}prestashop>pays_ps_b91c371eeb88143fd0260f990bcf8d75'] = 'Obc
 $_MODULE['<{pays_ps}prestashop>pays_ps_d613126ed777eb6ca7dee07c441d72ec'] = 'Heslo pro API:';
 $_MODULE['<{pays_ps}prestashop>pays_ps_4bf6ee33eefb1ca1eaeefcb2c41ca0bd'] = 'Popis volby platby:';
 $_MODULE['<{pays_ps}prestashop>pays_ps_b7568fef7a527645ecffb0c1e5eb3d19'] = 'Tato zpráva se zákazníkovi zobrazí při výběru typu platby.';
+$_MODULE['<{pays_ps}prestashop>pays_ps_24703a5df81fd65432998b2095e20b42'] = 'Zjednodušené zobrazení volby platby:';
+$_MODULE['<{pays_ps}prestashop>pays_ps_93cba07454f06a4a960172bbd6e2a435'] = 'Ano';
+$_MODULE['<{pays_ps}prestashop>pays_ps_bafd7322c6e97d25b6299b5d6fe8920b'] = 'Ne';
+$_MODULE['<{pays_ps}prestashop>pays_ps_ff3ce99984199a0bcc2722d70ad1c38e'] = 'Aktivujte při problémech se zobrazením volby platby při objednávce.';
 $_MODULE['<{pays_ps}prestashop>pays_ps_7f1971cb6b14c0837f13a0ff198f28d0'] = 'Podporované měny:';
 $_MODULE['<{pays_ps}prestashop>pays_ps_c9cc8cce247e49bae79f15173ce97354'] = 'Uložit';
 $_MODULE['<{pays_ps}prestashop>pays_ps_630f6dc397fe74e52d5189e2c80f282b'] = 'Zpět na seznam';
