@@ -1,13 +1,0 @@
-/* Pays payment module */
-.pays_ps-option{
-	background-color: #fbfbfb;
-    border-radius: 4px;
-}
-.pays_ps-option h2 {
-    font-size: 17px;
-    font-weight: bold;
-    color: #333;
-}
-.pays_ps-option h2 img {
-    margin-right: 15px;
-}
