@@ -4,3 +4,7 @@
 2019/04/19 (version 1.0.1)
 - Bug:     fixed untranslated messages with long code
 
+2020/02/17 (version 1.0.2)
+- General: Possibility to switch to simplified payment option view
+- General: Added currency code to messages
+
